<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SurtidoIntentImpl</string>
    <string name="action_settings">Settings</string>
    <string name="conociendo">Conociendo la EPS</string>
    <string name="ubicando">Localizacion</string>
    <string name="navegando">Acceso a la web</string>
    <string name="contactando">Tlf. de contacto: 973.702.700</string>
    <string name="sms">Enviar SMS</string>
    <string name="email">Enviar email</string>
    <string name="galeria">Acceder a galeria</string>
    <string name="sms_data">Tlf. destino: 646888777</string>
    <string name="email_data">Email destinatario: sss@udl.cat</string>

    <string name="Boto1">Por coord.</string>
    <string name="Boto2">Por direcc.</string>
    <string name="Boto3">Por URL</string>
    <string name="Boto4">Google</string>
    <string name="Boto5">Marcar</string>
    <string name="Boto6">Acceder Contactos</string>
    <string name="Boto7">LLamar</string>
    <string name="Boto8">SMS</string>
    <string name="Boto9">Email</string>
    <string name="Boto10">Ver galeria</string>
    <string name="Boto11">Tomar Foto</string>



</resources>